syntax = "proto3";

package redis_service;

option go_package = "github.com/Haseeb1399/waffle-go/redis_service";


// Define the request and response messages
message PutRequest {
  string key = 1;
  string value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message BatchRequest {
  repeated string keys = 1;
  repeated string values = 2; // For put_batch only
}

message BatchResponse {
  repeated string values = 1; // For get_batch response
}

message Empty {}

// Define the gRPC service
service RedisService {
  rpc Put(PutRequest) returns (Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc PutBatch(BatchRequest) returns (Empty);
  rpc GetBatch(BatchRequest) returns (BatchResponse);
  rpc DeleteBatch(BatchRequest) returns (Empty);
}
